[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/main/editor/creature/name-picker-popup.gd" type="Script" id=1]
[ext_resource path="res://src/main/ui/squeak/squeak-theme-h4.tres" type="Theme" id=2]
[ext_resource path="res://src/main/editor/creature/name-picker-popup-line-edit.gd" type="Script" id=3]

[node name="NamePickerPopup" type="PopupPanel"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 208.0
margin_bottom = 44.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 204.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 30 )
text = "asdf"
max_length = 256
script = ExtResource( 3 )

[connection signal="about_to_show" from="." to="." method="_on_about_to_show"]
[connection signal="text_changed" from="LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="text_entered" from="LineEdit" to="." method="_on_LineEdit_text_entered"]
